fixed the overflow issue from css

--- a/frontend/src/components/App.scss
+++ b/frontend/src/components/App.scss
@@ -17,6 +17,7 @@
   height: 100%;
   background-image: url("https://wallpapercave.com/wp/wp2824890.jpg");
   background-repeat: repeat;
+  overflow-x: scroll
 }
 
 
@@ -26,6 +27,7 @@
   margin-right: 10px;
   margin-bottom: 10px;
   left: 85%;
+  margin-bottom: 50px;
 }
 
 .message {
